tp11/examples/01-namespace.yaml
# TP11 - Namespace de travail
# Utilisation : kubectl apply -f 01-namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: tp11
  labels:
    kubernetes.io/metadata.name: tp11
